Added optional module for partitioning pixels into natural (N) or anthropogenic (A) influence. If the module is configured, it should be schedule before all other modules (suggested order: 3).
Requires new variables in GCBM configuration - see GCBM manual for more information:
disturbance_categories
disturbance_mortality
recovery_rules
partition

Requires new tables in the GCBM input database created by Recliner2GCBM builds later than 2019-09-27.

--- a/Source/moja.modules.cbm/CMakeLists.txt
+++ b/Source/moja.modules.cbm/CMakeLists.txt
@@ -31,6 +31,7 @@ set(MOJA_CBM_HEADERS
 	include/moja/modules/${PACKAGE}/cbmlandclasstransitionmodule.h
 	include/moja/modules/${PACKAGE}/cbmlandunitdatatransform.h
 	include/moja/modules/${PACKAGE}/cbmmodulebase.h
+    include/moja/modules/${PACKAGE}/cbmpartitioningmodule.h
 	include/moja/modules/${PACKAGE}/cbmsequencer.h
 	include/moja/modules/${PACKAGE}/cbmspinupdisturbancemodule.h
 	include/moja/modules/${PACKAGE}/cbmspinupsequencer.h
@@ -97,6 +98,7 @@ set(MOJA_CBM_SOURCES
     src/cbmdisturbancelistener.cpp
     src/cbmlandclasstransitionmodule.cpp
 	src/cbmlandunitdatatransform.cpp
+    src/cbmpartitioningmodule.cpp
 	src/cbmsequencer.cpp
 	src/cbmspinupdisturbancemodule.cpp
 	src/cbmpeatlandspinupoutput.cpp
