Fixed Poco case-sensitive names for Linux builds.

--- a/Source/moja.modules.cbm/CMakeLists.txt
+++ b/Source/moja.modules.cbm/CMakeLists.txt
@@ -4,7 +4,7 @@ string(REPLACE "." "_" NEW_PACKAGE "${PACKAGE}")
 string(TOUPPER "${NEW_PACKAGE}" LIBNAME_EXPORT)
 
 find_package(Boost COMPONENTS system thread filesystem date_time chrono program_options log log_setup REQUIRED)
-find_package(Poco COMPONENTS foundation data datasqlite dataodbc json REQUIRED)
+find_package(Poco COMPONENTS Foundation Data DataSQLite DataODBC JSON REQUIRED)
 find_package(PQXX REQUIRED)
 find_package(moja COMPONENTS moja.flint REQUIRED)
 
