Old OS detection, updated FindPQXX to attempt to fix Linux builds.

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -82,34 +82,39 @@ else(USE_STATIC_BOOST)
 endif(USE_STATIC_BOOST)
 
 # OS Detection
-include(CheckCXXCompilerFlag)
-
 message(STATUS "The compiler in use is ${CMAKE_CXX_COMPILER}.")
 message(STATUS "The compiler flags in use is ${CMAKE_CXX_FLAGS}.")
 if(CMAKE_SYSTEM MATCHES "Windows")
- 	add_definitions( -DMOJA_OS_FAMILY_WINDOWS )
- 	if (CMAKE_C_COMPILER_ID MATCHES "MSVC")
-		message(STATUS "XXX: MS Visual Compiler detected")
-		CHECK_CXX_COMPILER_FLAG("/std:c++17" COMPILER_SUPPORTS_CXX17)
-		if(COMPILER_SUPPORTS_CXX17)
-            message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has C++17 support.")
-		else()
-            message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++17 support. Please use a different C++ compiler.")
-		endif()
-	endif (CMAKE_C_COMPILER_ID MATCHES "MSVC")
+    add_definitions(-DMOJA_OS_FAMILY_WINDOWS)
+ 
+    if(CMAKE_C_COMPILER_ID MATCHES "MSVC")
+        message(STATUS "XXX: MS Visual Compiler detected")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /bigobj")
+    endif(CMAKE_C_COMPILER_ID MATCHES "MSVC")
 endif(CMAKE_SYSTEM MATCHES "Windows")
 
-if (CMAKE_SYSTEM MATCHES "Linux" )
-	add_definitions( -DMOJA_OS_FAMILY_UNIX )
+if (CMAKE_SYSTEM MATCHES "Linux")
+    add_definitions(-DMOJA_OS_FAMILY_UNIX)
+  
+    # Standard 'must be' defines.
+    add_definitions(-D_XOPEN_SOURCE=500 -D_REENTRANT -D_THREAD_SAFE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64)
+    set(SYSLIBS pthread dl rt)
 
-	CHECK_CXX_COMPILER_FLAG("-std=c++17" COMPILER_SUPPORTS_CXX17)
+    include(CheckCXXCompilerFlag)
+    CHECK_CXX_COMPILER_FLAG("-std=c++1y" COMPILER_SUPPORTS_CXX14)
+    CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+    CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
 
-	if(COMPILER_SUPPORTS_CXX17)
-		  message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has C++17 support.")
-	else()
-		  message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++17 support. Please use a different C++ compiler.")
-	endif()
-endif(CMAKE_SYSTEM MATCHES "Linux" )
+    if(COMPILER_SUPPORTS_CXX14)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -fPIC")
+    elseif(COMPILER_SUPPORTS_CXX11)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    elseif(COMPILER_SUPPORTS_CXX0X)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+    else()
+        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+    endif()
+endif(CMAKE_SYSTEM MATCHES "Linux")
 
 if(ENABLE_MOJA.MODULES.CBM)
     add_subdirectory(moja.modules.cbm)
