--- a/Source/moja.modules.cbm/CMakeLists.txt
+++ b/Source/moja.modules.cbm/CMakeLists.txt
@@ -154,6 +154,8 @@ set(PROJECT_MODULE_SOURCES
  
 set(PROJECT_TRANSFORM_HEADERS
     include/moja/modules/${PACKAGE}/cbmlandunitdatatransform.h
+    include/moja/modules/${PACKAGE}/dynamicgrowthcurvetransform.h
+    include/moja/modules/${PACKAGE}/dynamicgrowthcurvelookuptransform.h
     include/moja/modules/${PACKAGE}/growthcurvetransform.h
     include/moja/modules/${PACKAGE}/timeseriesidxfromflintdatatransform.h
     include/moja/modules/${PACKAGE}/transitionruletransform.h
@@ -161,6 +163,8 @@ set(PROJECT_TRANSFORM_HEADERS
 
 set(PROJECT_TRANSFORM_SOURCES
     src/cbmlandunitdatatransform.cpp
+    src/dynamicgrowthcurvetransform.cpp
+    src/dynamicgrowthcurvelookuptransform.cpp
     src/growthcurvetransform.cpp
     src/timeseriesidxfromflintdatatransform.cpp
     src/transitionruletransform.cpp
