VolumeToBiomassCarbonGrowth is now (ideally) a single instance stored in CBMObjectHolder in the library factory to avoid unnecessary processing by multiple modules that depend on yield curve information.
Added stand maturity calculation to yield curve objects, which gives the fraction of maximum foliage biomass achieved at a specified age - used mainly for albedo calculations.

--- a/Source/moja.modules.cbm/CMakeLists.txt
+++ b/Source/moja.modules.cbm/CMakeLists.txt
@@ -157,6 +157,7 @@ set(PROJECT_TRANSFORM_HEADERS
     include/moja/modules/${PACKAGE}/dynamicgrowthcurvetransform.h
     include/moja/modules/${PACKAGE}/dynamicgrowthcurvelookuptransform.h
     include/moja/modules/${PACKAGE}/growthcurvetransform.h
+    include/moja/modules/${PACKAGE}/standmaturitytransform.h
     include/moja/modules/${PACKAGE}/timeseriesidxfromflintdatatransform.h
     include/moja/modules/${PACKAGE}/transitionruletransform.h
 )
@@ -166,6 +167,7 @@ set(PROJECT_TRANSFORM_SOURCES
     src/dynamicgrowthcurvetransform.cpp
     src/dynamicgrowthcurvelookuptransform.cpp
     src/growthcurvetransform.cpp
+    src/standmaturitytransform.cpp
     src/timeseriesidxfromflintdatatransform.cpp
     src/transitionruletransform.cpp
 )
